<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">

    <EditText android:id="@+id/edit_message"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edit_message"/>

    <EditText android:id="@+id/building_name"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/building_name_msg"/>

    <EditText android:id="@+id/floor"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/floor_msg"/>

    <EditText android:id="@+id/room"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/room_msg"/>

    <Button
        android:layout_weight="1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button_search"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:onClick="sendLocation"/>

    <EditText android:id="@+id/street"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/street_msg"
        android:editable="false"/>

    <EditText android:id="@+id/city"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/city_msg"
        android:editable="false"/>

    <EditText android:id="@+id/zipcode"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/zipcode_msg"
        android:editable="false"/>

    <Button
        android:layout_weight="1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button_send"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:onClick="sendToServer"/>

    <!-- <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Estimote"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:onClick="testDatabase"/> -->

    <GridView
        android:id="@+id/gridview"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="?attr/actionBarSize"
        android:columnWidth="90dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center">
    </GridView>


</LinearLayout>


